# nftables-nat-rust-enhanced

./: Cargo.toml  LICENSE  NOTICE  README.md  TODO.md  install.sh  nat.toml  setup-console-assets.sh  setup-console.sh  setup.sh
.github/workflows/: release.yml
nat-cli/src/: apply.rs  config.rs  ip.rs  main.rs  menu.rs  prepare.rs  quota_loop.rs  runtime.rs  telegram.rs
nat-cli/src/menu/: audit_view.rs  backup.rs  update.rs
nat-common/: Cargo.toml
nat-common/src/: atomic.rs  audit.rs  dynamic_whitelist.rs  forward_test.rs  geoip.rs  hash.rs  last_good.rs  lib.rs  quota.rs  stats.rs  uninstall.rs
nat-console/: Cargo.toml
nat-console/src/: handlers.rs  main.rs  server.rs
static/: index.html  login.html
tests/: install-dry-run.sh
