[workspace]
members = ["nat-cli", "nat-common"]
resolver = "2"

[workspace.package]
version = "2.0.0"
authors = ["arloor <admin@arloor.com>"]
edition = "2024"

[workspace.dependencies]
# 共享依赖
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
ipnetwork = "0.20"
