[workspace]
members = ["nat-cli", "nat-common"]
resolver = "2"

[workspace.package]
version = "2.0.0"
authors = ["arloor <admin@arloor.com>"]
edition = "2024"

[workspace.dependencies]
# 共享依赖
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# 仅用于 CLI 展示层把 IANA 时区名（含 DST 的，如 America/Chicago）转成正确偏移；
# 状态文件 / audit log 内部仍存 UTC RFC3339，不写入 chrono-tz 类型。
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
ipnetwork = "0.20"
